# cpp-bp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  test-main.cc
